Merge position actions into PositionAction